--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/lib/opennlp-tools-1.5.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/lib/opennlp-uima-1.5.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
